# backtesting-engine

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
src/btengine/: __init__.py  config.py  sessions.py
src/btengine/analytics/: __init__.py  metrics.py  report.py  visualize.py
src/btengine/core/: __init__.py  broker.py  engine.py  events.py  order.py  portfolio.py
src/btengine/data/: __init__.py  loader.py  models.py  oanda_client.py
src/btengine/indicators/: __init__.py  atr.py  cross.py  moving_average.py  rsi.py  session_range.py
src/btengine/scripts/: download_data.py  run_backtest.py
src/btengine/strategy/: __init__.py  base.py  session_strategy.py
src/btengine/strategy/examples/: __init__.py  asia_reversion.py  opening_range.py  orb_retest.py  session_breakout.py  sma_crossover.py
tests/: conftest.py  test_asia_reversion.py  test_broker.py  test_engine.py  test_examples.py  test_indicators.py  test_orders_resting.py  test_portfolio.py  test_session_range.py  test_session_strategy.py  test_sessions.py  test_visualize.py
